# cryptocurrency_informer

./: .env.template  .gitignore  Readme.md  docker-compose.yaml  pyproject.toml  swagger.yaml
.github/workflows/: action.yaml
cryptocurrency_app/: .dockerignore  Dockerfile  app_logger.py  database.py  main.py  pyproject.toml  schedular.py
cryptocurrency_app/models/: connection.py  cryptocurrency.py
cryptocurrency_app/routes/: cryptocurrency.py
cryptocurrency_app/schemas/internal/: __init__.py  cryptocurrency_data.py  cryptocurrency_ticker.py  dates_period.py  error_response.py  succeess_response.py
cryptocurrency_app/services/: __init__.py  cryptocurrency.py
cryptocurrency_app/tasks/: cryptocurrency_price.py
tests/: __init__.py  conftest.py  test_task_cryptocurrency_price.py
