[tool.poetry]
name = "cryptocurrency-informer"
version = "0.1.0"
description = ""
authors = ["Sergey Solop <solop1992@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
