[tool.poetry]
name = "cryptocurrency-informer"
version = "0.1.0"
description = ""
authors = ["Sergey Solop <solop1992@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
sqlalchemy = "^2.0.36"
celery = "5.4.0"
apscheduler = "3.10.4"
aiohttp = "^3.10.10"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-env = "^1.1.5"
pytest-cov = "^6.0.0"
python-dotenv = "^1.0.1"
aioresponses = "^0.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
